fix: update footer colors for improved visibility and consistency

--- a/css/footer.css
+++ b/css/footer.css
@@ -97,7 +97,7 @@
     .site-footer {
         padding: 20px 0;
         font-size: 16px;
-        color: #805700;
+        color: #1b3446;
         background-color: #ffffff;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
@@ -123,7 +123,7 @@
     
     .footer-intro {
         font-size: 18px;
-        color: #805700;
+        color: #003f53;
         font-weight: medium;
         margin: 5px 0;
         font-family: Arial, sans-serif;
@@ -134,7 +134,7 @@
         flex-direction: column; /* Mengubah orientasi menjadi vertikal */
         gap: 10px; /* Jarak antar elemen */
         font-size: 16px;
-        color: #805700;
+        color: #003f53;
         align-items: center;
     }
     
@@ -159,14 +159,14 @@
     
     .footer-content a {
         text-decoration: none;
-        color: #805700;
+        color: #003f53;
         font-weight: 500;
         position: relative;
         font-size: 18px;
     }
     
     .footer-content a:hover {
-        color: #0e6b37;
+        color: #005f73;
     }
     
     .footer-content a::after {
@@ -176,7 +176,7 @@
         left: 50%;
         width: 0;
         height: 2px;
-        background-color: #0e6b37;
+        background-color: #005f73;
         transition: all 0.3s ease;
         border-radius: 5px;
     }
