--- a/css/invoice.css
+++ b/css/invoice.css
@@ -24,6 +24,12 @@ h4 {
     border-top: 10px solid #005f73;
 }
 
+.invoice-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 16px;
+}
 
 .left-header {
     display: flex;
@@ -82,6 +88,7 @@ h4 {
 .right {
     flex: 1;
 }
+
 .order-date {
     font-family: "Nunito", Arial, sans-serif;
     font-size: 0.9rem;
