--- a/css/styles.css
+++ b/css/styles.css
@@ -38,13 +38,13 @@ body {
     /* Opsional: menambahkan border-radius untuk tampilan lebih lembut */
 }
 
-.main-container,
+/* .main-container,
 .receipt-container {
     padding: 20px;
     background-color: #ffffff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-}
+} */
 
 /* Menu */
 .menu-grid {
